# wordhippo-mcp-server

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/mcp_server_wordhippo/: __init__.py  __main__.py  server.py
