[project]
name = "mcp-server-wordhippo"
version = "0.1.0"
description = "A Model Context Protocol server providing thesaurus tools using WordHippo"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Clare Liguori" }]
keywords = ["thesaurus", "wordhippo"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx<0.28",
    "lxml>=5.3.2",
    "mcp>=1.1.3",
    "protego>=0.3.1",
    "pydantic>=2.0.0",
    "requests>=2.32.3",
]

[project.scripts]
mcp-server-wordhippo = "mcp_server_wordhippo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
